inserción práctica 2 y css

--- a/chrischupapi/index.html
+++ b/chrischupapi/index.html
@@ -17,7 +17,7 @@
         <p>Nos tocó presentarnos en esta practica con nuestros pasatiempos</p>
         <h2> LINKS</h2>
 
-        <ul>
+        <ul class="a">
             <li><a href="https://github.com/chrischupapi/pasatiempos">Repositorio de pasatiempos</a></li>
             <li><a href="https://github.com/chrischupapi/pasatiempos/blob/main/index.html">Archivo HTML</a></li>
             <li><a href="https://github.com/chrischupapi/pasatiempos/blob/main/estilo.css">Archivo CSS</a></li>
@@ -28,8 +28,26 @@
 
         <p>Míercoles 13 de agosto del 2025</p>
     </article>
+    <article>
+        <header>
+            <h2>Práctica 2</h2>
+        </header>
+        <p>Pagina para mostrar nuestras prácticas</p>
+        <h2>LINKS</h2>
 
-    <footer>
+        <ul class="a">
+            <li><a href="https://github.com/FDW52AD2025/website52/tree/main/chrischupapi">Carpeta practica 2</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/blob/main/chrischupapi/index.html">Archivo HTML</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/blob/main/chrischupapi/estilo.css">Archivo CSS</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=chrischupapi">Commits de la práctica</a></li>
+        </ul>
+
+        <h2> Fechas de elaboración de la práctica</h2>
+
+        <p>20 al 22 de agosto</p>
+    </article>
+
+    <footer class="pie">
         <p>© 2025 - CHRISTIAN LEONARDO LOZANO RAMOS</p>
     </footer>
 </body>
