Se agregaron los links para regresar a la pagina principal

--- a/atchz/pasatiempos2/pasatiempo4.html
+++ b/atchz/pasatiempos2/pasatiempo4.html
@@ -14,7 +14,19 @@
         </header>
         <main>
             <article>
-                <header><h2>Dibujo</h2></header>
+                <header>
+                    <h2>Dibujo</h2>
+
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="./index.html"
+                                    >Regresar a la página principal</a
+                                >
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
 
                 <p>
                     Dibujar solía ser uno de mis pasatiempos favoritos,
