--- a/atchz/pasatiempos2/pasatiempo3.html
+++ b/atchz/pasatiempos2/pasatiempo3.html
@@ -11,6 +11,16 @@
     <body>
         <header>
             <h1>Tercer pasatiempo</h1>
+
+            <nav>
+                <ul>
+                    <li>
+                        <a href="./index.html"
+                            >Regresar a la página principal</a
+                        >
+                    </li>
+                </ul>
+            </nav>
         </header>
         <main>
             <article>
