se corrigio el header

--- a/atchz/pasatiempos2/pasatiempo4.html
+++ b/atchz/pasatiempos2/pasatiempo4.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1>Tercer pasatiempo</h1>
+            <h1>Cuarto pasatiempo</h1>
         </header>
         <main>
             <article>
