correcion de links

--- a/atchz/index.html
+++ b/atchz/index.html
@@ -121,7 +121,7 @@
                                 <a
                                     href="https://fdw52ad2025.github.io/website52/atchz/pasatiempos2/index.html"
                                     target="_blank"
-                                    >Link Página pasatiempso versión 2:</a
+                                    >Link Página pasatiempso versión 2</a
                                 >
                             </li>
                             <li>
@@ -129,14 +129,14 @@
                                     href="https://github.com/FDW52AD2025/website52/commits/main/?author=atchz&since=2025-08-27&until=2025-08-27"
                                     target="_blank"
                                     >Link Commits trabajo en clase 27 de
-                                    agosto:</a
+                                    agosto</a
                                 >
                             </li>
                             <li>
                                 <a
                                     href="https://github.com/FDW52AD2025/website52/commits/main/?author=atchz&since=2025-08-27&until=2025-08-29"
                                     target="_blank"
-                                    >Link Commits:</a
+                                    >Link Commits</a
                                 >
                             </li>
                         </ul>
