pequeños cambios visuales en el index

--- a/RdeReimer/index.html
+++ b/RdeReimer/index.html
@@ -13,12 +13,14 @@
             justify-content: center;
             font-size: x-large;
             text-shadow: 2px 5px 10px aqua;
+            color: rgb(50, 50, 50);;
         }
         .centrado-text{
             display: flex;
             justify-content: center;
             text-align: center;
             padding: 10px 10px;
+            color: rgb(50, 50, 50);;
         }
         .centrado-ul{
             display: grid;
@@ -40,11 +42,48 @@
             justify-content: center;
             margin-top: 50px;
             text-shadow: 2px 5px 10px aqua;
+            color: rgb(50, 50, 50);;
         }
         body{
             background-color: rgb(247, 239, 230);
         }
+       a{
+            color: rgb(0, 128, 128);
+        }
+            a:hover{
+            color:rgb(0, 255, 255);
+        }
+        li{
+            color: rgb(50, 50, 50);;
+        }
     </style>
+<!-- ===========================================
+    Paleta de colores para la web
+    Color primario: rgb(0, 255, 255) (#00FFFF)
+    =========================================== 
+
+    #Primario 
+    --color-primario: rgb(0, 255, 255);  #00FFFF 
+
+    #Secundario 
+    --color-secundario: rgb(0, 128, 128);  #008080 
+
+    #Acento brillante 
+    --color-acento-brillante: rgb(255, 105, 180)   #FF69B4 
+
+    #Acento oscuro 
+    --color-acento-oscuro: rgb(0, 204, 204);  #00CCCC 
+
+    #Fondo cálido 
+    --color-fondo-calido: rgb(247, 239, 230);  #F7EFE6 
+
+    #Neutro medio 
+    --color-neutro-medio: rgb(200, 200, 200);  #C8C8C8 
+
+    #Neutro oscuro 
+    --color-neutro-oscuro: rgb(50, 50, 50);  #323232 
+-->
+
 </head>
 <body >
     <header>
@@ -73,7 +112,7 @@
         </pre>
         <ul class="centrado-ul">
             <li>Link Commits: 
-                <a href="https://github.com/rdereimer/misgustos/commits/main/?since=2025-08-13&until=2025-08-15
+                <a c href="https://github.com/rdereimer/misgustos/commits/main/?since=2025-08-13&until=2025-08-15
                  ">https://github.com/rdereimer/misgustos/commits/main/?since=2025-08-13&until=2025-08-15</a> 
            <li> Link Repositorio: 
              <a href="https://github.com/rdereimer/misgustos">https://github.com/rdereimer/misgustos</a>
