--- a/jesuscruz125/pasatiemposv2/pasatiempo1.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo1.html
@@ -40,6 +40,16 @@
                 <p class="deporte">Me gusta ejercitarme para mantener un cuerpo sano y estar <strong>físicamente activo</strong>. Aunque disfruto mucho de este pasatiempo, reconozco que requiere bastante esfuerzo, por lo que procuro hacerlo con el objetivo de <em>mantenerme saludable</em> y no tomarlo de manera demasiado competitiva.</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Yko3GMseY40?si=LBL_8VJHlT0ydO-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+                <h3>Ejercicios favoritos</h3>
+                <p>Jalón al pecho</p>
+                <video width="500px" controls src="https://cdn.pixabay.com/video/2022/10/16/135162-761273567_large.mp4"></video>
+
+                <p>Curl de bíceps</p>
+                <video width="500px" controls src="https://cdn.pixabay.com/video/2021/03/05/66991-521238787_large.mp4"></video>
+
+                <p>Extensión de tríceps por encima de la cabeza</p>
+                <video width="500px" controls src="https://cdn.pixabay.com/video/2022/10/16/135160-761273559_large.mp4"></video>
+
                 <h2>Mi rutina semanal</h2>
                 <table>
                     <tr>
