--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -53,8 +53,9 @@
                 <nav>
                     <h4>Enlaces de GitHub</h4>
                     <ul>
-                        <li><a target="_blank" href="">Aún no esta listo</a></li>
-                        <li><a target="_blank" href="">Aún no esta listo</a></li>
+                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/pasatiemposmod/index.html">LINK AL PASATIEMPO V2</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-27&until=2025-08-27">LINK COMMIT DE LA CLASE DEL 27 DE AGOSTO</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-27&until=2025-08-29">LINK DE TODOS LOS COMMITS</a></li>
                     </ul>
                     <hr>
                 </nav>
