--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -39,6 +39,13 @@
             </ul>
         </section>
 
+        <h1>practica2</h1>
+        <p>crer cambios en tu paginna</p>
+        <a href="https://github.com/FDW52AD2025/website52/blob/main/EddMont/index.html" target="_blank">Ver mi página en GitHub</a>
+        <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">commits</a>
+
+        
+
     </main>
     <aside></aside>
     <footer></footer>
