--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -44,6 +44,8 @@
         <a href="https://github.com/FDW52AD2025/website52/blob/main/EddMont/index.html" target="_blank">Ver mi página en GitHub</a>
         <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">commits</a>
 
+        <h1>practica 3</h1>
+        <p>hacer una pagina que lleve a 5 paginas</p>
         
 
     </main>
