correccion pagina principal

--- a/gfuelinme/pasatiemposv2/index.html
+++ b/gfuelinme/pasatiemposv2/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina principal">
-    <meta name="keywords" content="Futbol, Musica, Lectura, Cine">
+    <meta name="keywords" content="Fútbol, Música, Lectura, Cine">
     <meta name="author" content="Jorge Ignacio Salazar Mares">
-    <title>Pagina principal</title>
     <link rel="stylesheet" href="estilos-pv2.css">
+    <title>Pagina principal</title>
 </head>
 <body>
     <header>
@@ -16,27 +15,26 @@
     </header>
     <nav>
         <ul class="nav-ul">
-            <li><a href="pagina2.html" target="_blank">Futbol</a></li>
-            <li><a href="pagina3.html" target="_blank">Musica</a></li>
-            <li><a href="pagina4.html" target="_blank">Lectura</a></li>
-            <li><a href="pagina5.html" target="_blank">Cine</a></li>
+            <li><a href="pasatiempo1.html" target="_blank">Fútbol</a></li>
+            <li><a href="pasatiempo2.html" target="_blank">Música</a></li>
+            <li><a href="pasatiempo3.html" target="_blank">Lectura</a></li>
+            <li><a href="pasatiempo4.html" target="_blank">Cine</a></li>
         </ul>
     </nav>
     <main>
         <article>
             <section>
-                <h2>Un poco sobre mi</h2>
-                <p>Soy un estudiante de 22 años originario de Monterrey, Nuevo León. Me llamo Jorge, nunca he tenido ningun apodo asi que todos me llaman por mi nombre. Soy egresado del Centro de Educacion Artistica "Alfonso Reyes", donde curse el bachillerato en Artes y Humanidades con una especialidad en Musica. Actualmente estoy cursando el 5° semestre de la Licenciatura en Tecnologias de Informacion en la Facultad de Contaduria Publica y Administracion de la UANL.
-                </p>
+                <h2>Un poco sobre mí</h2>
+                <p>Soy un estudiante de 22 años originario de Monterrey, Nuevo León. Me llamo Jorge, nunca he tenido ningún apodo, así que todos me llaman por mi nombre. Soy egresado del Centro de Educación Artística "Alfonso Reyes", donde cursé el bachillerato en Artes y Humanidades con una especialidad en Música. Actualmente, estoy cursando el 5.° semestre de la Licenciatura en Tecnologías de Información en la Facultad de Contaduría Pública y Administración de la UANL.</p>
             </section>
         </article>
         <article>
             <section>
-                <h2>Cuentame sobre ti</h2>
-                <p>Una de las cosas que mas disfruto es escuchar a las personas hablar de sus gustos o temas de interes.</p>
+                <h2>Cuentame sobre tí</h2>
+                <p>Una de las cosas que más disfruto es escuchar a las personas hablar de sus gustos o temas de interes.</p>
 
                 <p>
-                    <label for="genero">Genero:</label>
+                    <label for="genero">Género:</label>
                     <select name="genero" id="genero">
                         <option value="1">Masculino</option>            
                         <option value="2">Femenino</option>            
