--- a/gfuelinme/pasatiemposv2/pasatiempo1.html
+++ b/gfuelinme/pasatiemposv2/pasatiempo1.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pasatiempo 1">
-    <meta name="keywords" content="Futbol, Tigres, UANL, Campeonato">
+    <meta name="keywords" content="Fútbol, Tigres, UANL, Campeonato">
     <meta name="author" content="Jorge Ignacio Salazar Mares">
     <link rel="stylesheet" href="estilos-pv2.css">
     <title>Pasatiempo 1</title>
 </head>
 <body>
     <header>
-        <h1>FUTBOL</h1>
+        <h1>FÚTBOL</h1>
     </header>
     <main>
         <article>
@@ -21,18 +21,23 @@
                 <img width="560" height="315" src="imagenes/aficion-tigres-uanl.jpg" alt="Aficion de los Tigres de la UANL">
                 <img width="560" height="315" src="imagenes/mosaico-tigres.jpeg" alt="Mosaico de los Tigres de la UANL">
 
-                <p>El partido que mas he disfrutado ha sido contra el Club Atletico River Plate en la fase de grupos de la Copa Libertadores de America. <br> Ese dia me toco ver el partido desde las tribunas de la puerta 5B junto con mi hermano y dos primos.</p>
+                <p>El partido que mas he disfrutado ha sido contra el Club Atletico River Plate en la fase de grupos de la Copa Libertadores de America.</p>
 
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/hV7tY6jBlHQ?si=aEwFXnyQSlxXwazC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                <p>Ese día me tocó ver el partido desde el pasillo de la puerta 5B junto con mi hermano y dos primos, pues el estadio había tenido sobreventa y una hora antes del partido ya estaba al 100% de su capacidad.</p>
             </section>
         </article>
 
         <aside>
             <section>
-                <h2><i>Dato curioso...</i></h2>
-                <p>La primera vez que fui al Estadio Universitario fue el 23 de octubre del 2010, en un partido contra Pumas de la UNAM. Recuerdo que el marcador quedo 2 a 0 a favor de Tigres con goles de Juninho y Damian Alvarez.</p>
+                <h2>Dato curioso</h2>
+                <p>La primera vez que fui al Estadio Universitario fue el 23 de octubre del 2010, en un partido contra los Pumas de la UNAM. Recuerdo que el marcador fue 2 a 0 a favor de Tigres con goles de Juninho y Damian Álvarez.</p>
             </section>
         </aside>
     </main>
+    <footer>
+        <p class="p-footer">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
+    </footer>
 </body>
 </html>
