Agregue el primer pasatiempo

--- a/RickyCorCam/pasatiempos2/index.html
+++ b/RickyCorCam/pasatiempos2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>PASATIEMPOS2</h1>
+        <h1>PASATIEMPOS 2</h1>
         <p>En esta pagina enlistare algunos de mis pasatiempos en los que cada uno de ellos <br>
         tendra una pagina propia.</p>
         <hr>
@@ -16,13 +16,19 @@
         <h1>Mis pasatiempos</h1>
         <section>
             <ul>
-                <li><a href="pasatiempo1.html">Pasatiempo1</a></li>
-                <li><a href="pasatiempo2.html">Pasatiempo2</a></li>
-                <li><a href="pasatiempo3.html">Pasatiempo3</a></li>
-                <li><a href="pasatiempo4.html">Pasatiempo4</a></li>
-                <li><a href="pasatiempo5.html">Pasatiempo5</a></li>
+                <li><a href="pasatiempo1.html" target="_blank">VIDEOJUEGOS</a></li>
+                <li><a href="pasatiempo2.html" target="_blank">GUITARRA</a></li>
+                <li><a href="pasatiempo3.html" target="_blank">Pasatiempo3</a></li>
+                <li><a href="pasatiempo4.html" target="_blank">Pasatiempo4</a></li>
+                <li><a href="pasatiempo5.html" target="_blank">Pasatiempo5</a></li>
             </ul>
         </section>
+        <br>
+        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdOCgBeWHQYQAQEaS2tu-QMn2kDL4JDY5B3594qBAyVFVo71w/formResponse" method="POST" target="_blank">
+            <input type="text" name="entry.2105416059" placeholder="Ingrese su nombre" required>
+            <input type="text" name="entry.670043046" placeholder="Ingrese su pasatiempo favorito" required>
+            <button type="submit">Enviar</button>
+        </form>
     </main>
 </body>
 </html>
