--- a/RickyCorCam/index.html
+++ b/RickyCorCam/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,14 +49,37 @@
                 <h1>Links de la practica 2</h1>
                 <ul>
                     <li><a href="https://fdw52ad2025.github.io/website52/RickyCorCam/index.html">Link de la pagina personal</a></li>
-                    <li><a href="https://github.com/FDW52AD2025/website52/commit/36fd768da39f4e694e4114233bc8bf38393f5013">Link 1er commit(Creacion de carpeta y archivo html) </a></li>
-                    <li><a href="https://github.com/FDW52AD2025/website52/commit/7827112bd3567b1c6ee5dc7e4a8f3515eda3a767">Link 2do commit(Links de la practica 1 en el index)</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-08-20&until=2025-08-22">Links commits</a></li>
+                </ul>
+            </article>
+        </section>
+        <section>
+            <hr>
+            <h1>Practica 3</h1>
+            <p>Modificar la página pasatiempos que desarrollo en su cuenta personal. <br>
+                Está practica consiste en realizar la versión 2 sobre sus pasatiempos, pero esta vez se tiene que guardar en la organización. <br> 
+                Se solicita que utilice 5 archivos html para la información de sus pasatiempos. <br>
+                En cada documento html utilice etiquetas de estructura (header,nav, main,aside,footer).
+            </p>
+            <p>
+                Se deben agregar nuevas etiquetas de las paginas 23,27, 29, 30,31,32 del material de clase. <br>
+
+                Dentro del nuevo sitio diseñe algún formulario (form). <br>
+
+                Fecha commits: 27 al 29 de Agosto.
+            </p>
+            <article>
+                <h1>Links de la practica 3</h1>
+                <ul>
+                    <li><a href="https://fdw52ad2025.github.io/website52/RickyCorCam/pasatiempos2/index.html">Link de la pagina pasatiempo version 2</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-08-27&until=2025-08-27">Link commit trabajo en clase 27 de agosto</a></li>
+                    <li><a href="">Links commits</a></li>
                 </ul>
             </article>
         </section>
     </main>
     <aside>
     </aside>
-    <footer></footer>
+    <footer>Ricardo Cortes Camarillo #2002049</footer>
 </body>
 </html>
