--- a/gfuelinme/pasatiemposv2/pasatiempo2.html
+++ b/gfuelinme/pasatiemposv2/pasatiempo2.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pasatiempo 2">
-    <meta name="keywords" content="Musica, Rock, Punk, Bandas">
+    <meta name="keywords" content="Música, Rock, Punk, Trap, Experimental">
     <meta name="author" content="Jorge Ignacio Salazar Mares">
     <link rel="stylesheet" href="estilos-pv2.css">
     <title>Pasatiempo 2</title>
 </head>
 <body>
     <header>
-        <h1>MUSICA</h1>
+        <h1>MÚSICA</h1>
     </header>
     <main>
         <article>
@@ -22,14 +22,14 @@
                 <img width="560" height="315" src="imagenes/2-minutos-banda.jpg" alt="Banda de punk 2 Minutos">
             </section>
             <section>
-                    <h2>Top 5 artistas favoritos</h2>
+                    <h2>Mis artistas favoritos</h2>
                     <p>Tambien me gusta meterme a páginas como Soundcloud o Bandcamp para descubrir artistas nuevos, sobre todo aquellos que no son tan conocidos. A veces encuentro propuestas muy buenas que no suenan en ningún otro lado. Mi género favorito es el rock en español, me gusta por su estilo y por las letras, que muchas veces dicen cosas con las que me identifico. Aun así, trato de no quedarme solo con un tipo de música. Escucho otros géneros también, porque creo que conocer distintos estilos ayuda a abrir la mente y te hace crecer, tanto personalmente como en lo creativo.</p>
 
                     <table border="1px">
                         <tr>
                             <th>Nombre</th>
-                            <th>Genero</th>
-                            <th>Album favorito</th>
+                            <th>Género</th>
+                            <th>Albúm favorito</th>
                         </tr>
                         <tr>
                             <td>Seguimos Perdiendo</td>
@@ -37,26 +37,37 @@
                             <td>Sendero a la cirrosis</td>
                         </tr>
                         <tr>
-                            <td>Bladee</td>
+                            <td lang="en">Bladee</td>
                             <td>Experimental</td>
-                            <td>Eversince</td>
+                            <td lang="en">Icedancer</td>
                         </tr>
                         <tr>
                             <td>2 Minutos</td>
                             <td>Punk Rock</td>
-                            <td>Valentin Alsina</td>
+                            <td>Valentín Alsina</td>
                         </tr>
                         <tr>
-                            <td>Yung Beef</td>
+                            <td lang="en">Yung Beef</td>
                             <td>Trap</td>
-                            <td>ADROMICFMS IV</td>
+                            <td lang="en">
+                                <abbr title="All This Rachets On Me I Can't Feel My Soul">ADROMICFMS</abbr> 
+                                <abbr title="Four">IV</abbr>
+                            </td>
                         </tr>
+                        <tr>
                             <td>Callejeros</td>
                             <td>Rock Barrial</td>
-                            <td>Presion</td>
+                            <td>Presión</td>
+                        </tr>
                     </table>
+
+                    <p>También me gusta ir a conciertos, pero si me pusiera a explicar esa parte no terminaría.</p>
+                    <video controls width="560" height="315" src="imagenes/concierto-yung-beef.mp4"></video>
             </section>
         </article>
+        <footer>
+            <p class="p-footer">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
+        </footer>
     </main>
 </body>
 </html>
