--- a/gfuelinme/pasatiemposv2/pasatiempo3.html
+++ b/gfuelinme/pasatiemposv2/pasatiempo3.html
@@ -23,17 +23,22 @@
         </article>
         <aside>
             <section>
-                <h2><i>Para iniciar...</i></h2>
+                <h2>Para iniciarte en la lectura</h2>
                 <p>Recomiendo los siguientes libros:</p>
 
-                <ul>
+                <ul class="links-libros">
                     <li><a href="https://www.amazon.com.mx/metamorfosis-Franz-Kafka/dp/6070742257/ref=sr_1_1?__mk_es_MX=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=13O70Q6MVXXO0&dib=eyJ2IjoiMSJ9.TCKK66N52uIZS4WGkf-VJZirTvPCiEi7zTfSKckOQ6pXcGo2Qknl2JRmK8p2kSn6_4aZVV3Abv2AoXby4RgR9hVlwCi-qdTEPlNQ__D4-ucVBv5BzubbJ42ACR1xBnru1Bo6Ri6WjRy03M8_C5FzxHplwD_lAW9UCp8q0dy4MtOJUh197L-3djYuNekAkICYJNpcTaDfDST07rPmpUsTZhiNiYn9Uj0ULYhnmeeTPAlFxlhmqC_Y4H4dkXlAoO8Opcc68407n8mJAgSqO2zZhx7QRacWjvnrIMDb4hcIBRM.yo-eJaobcUZ2OC9O8-njveS6di_6_RbQndiJyvt7IjM&dib_tag=se&keywords=metamorfosis&qid=1756514913&sprefix=metamorfosis%2Caps%2C135&sr=8-1&ufe=app_do%3Aamzn1.fos.de93fa6a-174c-4df7-be7c-5bc8e9c5a71b" target="_blank">Metamorfosis</a></li>
+                    <br>
                     <li><a href="https://www.amazon.com.mx/El-hombre-en-busca-sentido/dp/8425432022/ref=sr_1_1?crid=1FLXPR61I1AOW&dib=eyJ2IjoiMSJ9.AZkgy4O0DnWB_dn9FsiJnBYVI9x3u8dXYkqFfQRjk7cRiAhI-ayOZF5idpW_JonRkJVGfbQzWp6PoB25nFOJ93UdHEa5SbQP_MvN8siCe1sAx1hgwRLGxNKf9TYWs3VYz8pXoQb4J94wl-EtJrIlBg04HX6rhsJ4jG0QjCM-juLOxHEUOA3bve8EAxi5Njjcltrumgmqiz49b2pWVY-ba43381lQSh6x9jiLlPQSy90GHfAad3OImAl_3qgbos8qYeHdeSIeJYRuMceJoDGHGuz8JnLy3f1u_El0LM85aUM.bgw5zCFY5xYQtWway1yN9xpn-4BaCEdepqvtg7rAY6Q&dib_tag=se&keywords=el+hombre+en+busca+de+sentido&qid=1756514954&sprefix=el+hom%2Caps%2C123&sr=8-1&ufe=app_do%3Aamzn1.fos.de93fa6a-174c-4df7-be7c-5bc8e9c5a71b" target="_blank">El hombre en busca de sentido</a></li>
                 </ul>
-                <p>Metamorfosis pone en evidencia la lucha interna y la alienación que surge de la desconexión del ser humano consigo mismo y con su entorno, El hombre en busca de sentido propone que incluso en las condiciones más extremas de sufrimiento y desconcierto, podemos encontrar un propósito. Si te interesa explorar el sufrimiento, la alienación y el sentido de la vida desde perspectivas distintas pero complementarias, estos dos libros son muy buenos.</p>
-                <p><br> Lo dejo a tu decisión, ¡Pero definitivamente valen la pena!</p>
+                <p>Metamorfosis pone en evidencia la lucha interna y la alienación que surge de la desconexión del ser humano consigo mismo y con su entorno. El hombre en busca de sentido propone que incluso en las condiciones más extremas de sufrimiento y desconcierto, podemos encontrar un propósito. Si te interesa explorar el sufrimiento, la alienación y el sentido de la vida desde perspectivas distintas pero complementarias, estos dos libros son muy buenos. </p>
+                
+                <p>Lo dejo a tu decisión, ¡Pero definitivamente valen la pena!</p>
             </section>
         </aside>
+        <footer>
+            <p class="p-footer">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
+        </footer>
     </main>
 </body>
 </html>
