--- a/gfuelinme/pasatiemposv2/pasatiempo4.html
+++ b/gfuelinme/pasatiemposv2/pasatiempo4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pasatiempo 4">
-    <meta name="keywords" content="Cine, Exorcista, Halloween, Taxi Driver, Volver al futuro">
+    <meta name="keywords" content="Cine, Exorcista, Halloween, Taxi Driver, Volver al futuro, Skins">
     <meta name="author" content="Jorge Ignacio Salazar Mares">
     <link rel="stylesheet" href="estilos-pv2.css">
     <title>Pasatiempo 4</title>
@@ -32,13 +32,13 @@
             </section>
 
             <section>
-                <h2>Top 5 peliculas favoritos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis repellendus, perferendis reiciendis autem, laudantium quas aperiam provident, amet fuga in fugiat possimus officiis non incidunt unde maiores ducimus molestias aspernatur!</p>
+                <h2>Mis peliculas favoritas</h2>
+                <p>Las siguientes peliculas las recomiendo a casi cualquier persona:</p>
 
                 <table border="1px">
                     <tr>
                         <th>Nombre</th>
-                        <th>Genero</th>
+                        <th>Género</th>
                     </tr>
                     <tr>
                         <td>Taxi Driver</td>
@@ -60,11 +60,14 @@
                         <td>Drama</td>
                 </table>
 
-                <h2><i>Mencion honorifica a...</i></h2>
-                <p>A pesar de no ser una pelicula, Skins es una de mis series favoritas. puedo verla un monton de veces y nunca me aburre. Ademas, es una de las primeras series que mire durante mi adolescencia y me trae buenos recuerdos.</p>
+                <h2>Mencion honorifica</h2>
+                <p>A pesar de no ser una película, Skins es una de mis series favoritas. Puedo verla un montón de veces y nunca me aburre. Además, es una de las primeras series que miré durante mi adolescencia y me trae buenos recuerdos.</p>
                 <img width="560" height="315" src="imagenes/skins-serie.jpg" alt="Serie Skins">
             </section>
         </article>
+        <footer>
+            <p class="p-footer">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
+        </footer>
     </main>
 </body>
 </html>
