--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -46,7 +46,7 @@
 
         <h1>practica 3</h1>
         <p>hacer una pagina que lleve a 5 paginas</p>
-        <a href="https://github.com/FDW52AD2025/website52/blob/main/EddMont/pasatiempos2/index.html">Pasatiempos 2 (GitHub)</a>
+        <a href="https://fdw52ad2025.github.io/website52/EddMont/pasatiempos2/index.html">Pasatiempos 2 (GitHub)</a>
         <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">commits</a>
 
     </main>
