--- a/RickyCorCam/pasatiempos2/pasatiempo2.html
+++ b/RickyCorCam/pasatiempos2/pasatiempo2.html
@@ -6,6 +6,19 @@
     <title>GUITARRA</title>
 </head>
 <body>
-    
+    <header>
+        <hr>
+        <h1>GUITARRA</h1>
+    </header>
+    <main>
+        <hr>
+        <p>La <strong>guitarra</strong> es un pasatiempo muy bueno a mi parecer, <br>
+            ya que ademas de despejarte y de ayudarte a mejorar tu motricidad en los dedos y manos, <br>
+            tambien te ayuda a despejarte mentalmente y a tener mejor ritmo.
+            Asi mismo desde que comence a tocar guitarra me ha gustado y le he prestado mas atencion a la musica regional. <br>
+            algo que a mi parecer cada vez se perdia mas dado que siempre ibamos prefiriendo la extranjera.
+        </p>
+        <img src="img/guitarra.jpg" alt="GUITARRA" width="350">
+    </main>
 </body>
 </html>
