--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -41,7 +41,7 @@
 
         <h1>practica2</h1>
         <p>crer cambios en tu paginna</p>
-        <a href="https://fdw52ad2025.github.io/website52/EddMont/pasatiempos2/index.html"></a>
+        <a href="https://github.com/FDW52AD2025/website52/blob/main/EddMont/index.html"></a>
         <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">commits</a>
 
         <h1>practica 3</h1>
