--- a/EddMont/pasatiempos2/Pasatiempo5.html
+++ b/EddMont/pasatiempos2/Pasatiempo5.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi quinto pasatiempo</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Mi quinto pasatiempo</h1>
+        <p>
+            Cocinar fue mi ultimo pasatiempo adquirido uno de los pasatiempos mas estresantes que tengo 
+        </p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#Cocina">Cocinar</a></li>
+            <li><a href="#Por que me gusta?">Por que?</a></li>
+            <li><a href="#Platillos favoritos">Canciones</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section id="#Cocina">
+            <h2>Cocinar</h2>
+            <p>
+                Uff cocinar una de las practicas en la que fui malo muy pesimo pues aun despues de seguir los pasos 
+                de las recetas uno por uno el sabor no me convencia pero conforme fui haciendo los platos mal fui 
+                mejorando mi tecnica de cocina y fui aprendiendo a cocinar mejor algunos conceptos y algunos tipos de cocina
+                a pesar de no dominar estos estilos me gusta pues aun con lo basico puedo hacer muchas cosas y tambien significa
+                que puedo aprender mas y mejorar mas.
+            </p>
+        </section>
+
+        <section id="Por que me gusta?">
+            <h2>por que?</h2>
+            <p>
+                La razon detras del porque yo intnte aprender a cocinar es debido a que casi siempre comia lo mismo debido al 
+                poco tiempo que tenian para hacer de comer o cuando tenian que contratar a una persona que me cuidara siempre
+                era el mismo tipo de comida algo que no me gustaba asi que decidi aprender a cocinar ademas asi podia ayudar a 
+                mi familia a descansar un poco asi que aprendi y aprendi hasta que empece a agarrar el gusto creo que una de las 
+                formas en las que una persona puede dar amor sin decir es atraves de la cocina de la comida pues con ella 
+                trasmites tus sentimientos y tu forma de pensar pues puedes crear diferentes recetas dependiendo de tu creatividad
+                te da tantas oportunidades diferentes que el explorarlas hace que cada platillo que haces sea como una aventura nueva.
+            </p>
+        </section>
+
+        <section id="Platillos favoritos">
+            <h2>Canciones</h2>
+            <p>
+                Cada tema que hay es muy distinto aunque todas son de la misma artista
+            </p>
+            <table>
+                <tr>
+                    <th>Mejores Canciones</th>
+                </tr>
+                <tr><td>Tacos de birria</td></tr>
+                <tr><td>Pollo a la naranja</td></tr>
+                <tr><td>El mole</td></tr>
+            </table>
+        </section>
+    </main>
+
+    <aside>
+        <h3>Dato extra</h3>
+        <p>
+           El chile durante su historia no solo a servido para dar sabor a la comida en algunas epocas prehispanicas
+           fueron utilizados como armas. 
+        </p>
+    </aside>
+
+    <footer>
+        <p>emilianoaleman1999@gmail.com</p>
+    </footer>
 </body>
 </html>
