--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -40,8 +40,8 @@
         </section>
 
         <h1>practica2</h1>
-        <p>crer cambios en tu paginna</p>
-        <a href="https://github.com/FDW52AD2025/website52/blob/main/EddMont/index.html"></a>
+        <p>crear cambios en tu pagina</p>
+        <a href="https://github.com/FDW52AD2025/website52/blob/main/EddMont/index.html"target="_blank">pagina</a>
         <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">commits</a>
 
         <h1>practica 3</h1>
