agregue la practica 3

--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="hoja-de-estilos.css">
-    <title>Evidencias</title>
+    <meta name="description" content="Portafolio de evidencias">
+    <meta name="keywords" content="Tareas, Desarrollo Web, UANL, FACPYA">
+    <meta name="author" content="Jorge Ignacio Salazar Mares">
+    <title>Portafolio</title>
 </head>
 <body>
     <header>
@@ -13,20 +16,21 @@
     <main>
         <article>
             <header>
-            <h2 id="header-practicas">Practicas</h2>
+            <h2 id="header-evidencias">Evidencia 1</h2>
             </header>
             <section>
                 <h3>Practica 1</h3>
                 <p>Realizada el 15 de Agosto del 2025.</p>
-                <p>En esta practica hicimos uso de etiquetas basicas de HTML para crear una pagina web estatica sobre nuestros pasatiempos.</p>
+                <p>En esta practica hicimos uso de etiquetas basicas de HTML para crear una página web estatica sobre nuestros pasatiempos.</p>
                 <ul>
                     <li>
-                        <a href="https://gfuelinme.github.io/practica-1/" target="_blank">Pagina web</a>
+                        <a href="https://gfuelinme.github.io/practica-1/" target="_blank">Página web</a>
                     </li>
                     <li>
                         <a href="https://github.com/gfuelinme/practica-1" target="_blank">Repositorio</a>
                     </li>
-                    <li><a href="https://github.com/gfuelinme/practica-1/commits/main/?since=2025-08-15&until=2025-08-15" target="_blank">Commits</a>
+                    <li>
+                        <a href="https://github.com/gfuelinme/practica-1/commits/main/?since=2025-08-15&until=2025-08-15" target="_blank">Commits</a>
                     </li>
                 </ul>
             </section>
@@ -35,8 +39,28 @@
                 <p>Realizada el 22 de Agosto del 2025.</p>
                 <p>En esta practica se creo una carpeta personal dentro de una organizacion para trabajar una pagina web colaborativa.</p>
                 <ul>
-                    <li><a href="https://fdw52ad2025.github.io/website52/gfuelinme/index.html" target="_blank">Pagina personal</a></li>
-                    <li><a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-08-20&until=2025-08-22" target="_blank">Commits</a></li>
+                    <li>
+                        <a href="https://fdw52ad2025.github.io/website52/gfuelinme/index.html" target="_blank">Página personal</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-08-20&until=2025-08-22" target="_blank">Commits</a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3>Practica 3</h3>
+                <p>Realizada el 29 de Agosto del 2025.</p>
+                <p>En esta practica se mejoró la página web estatica realizada en la Practica 1.</p>
+                <ul>
+                    <li>
+                        <a href="https://fdw52ad2025.github.io/website52/gfuelinme/pasatiemposv2/index.html" target="_blank">Página web</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-08-27&until=2025-08-27" target="_blank">Commits en clase</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=gfuelinme&since=2025-08-29&until=2025-08-29" target="_blank">Commits</a>
+                    </li>
                 </ul>
             </section>
         </article>
