--- a/victoriabalderas/pasatiemposver2/pagina3.html
+++ b/victoriabalderas/pasatiemposver2/pagina3.html
@@ -29,9 +29,6 @@
                         <h2>La historia</h2>
                     </header>
                     <p>El emprendimiento de mi madre comenzó cuando yo era pequeña. A ella le gustaba confeccionar vestidos para ocasiones especiales para mi y para mi hermana. Poco a poco y gracias a mucha práctica comenzó a realizar pedidos como favores para algunos de sus conocidos y empezó a crecer. </p>
-
-                    <img src="" alt="foto aquí">
-                    <footer>Fotografía</footer>
                 </section>
 
                 <section>
@@ -45,7 +42,8 @@
                     <header>
                         <h2>Actualidad</h2>
                     </header>
-                    <p>Actualmente estamos a un mes de cumplir nuestro décimo aniversario y hemos llegado a distintas escuelas, academias de danza e incluso a otros estados de la república. Estamos muy orgullosas de lo que hemos crecido a lo largo de los últimos dos años.  </p>
+                    <p>Actualmente estamos a un mes de cumplir nuestro décimo aniversario y hemos llegado a distintas escuelas, academias de danza e incluso a otros estados de la república. Estamos muy orgullosas de lo que hemos crecido a lo largo de los últimos dos años.</p>    
+                    <iframe src="https://drive.google.com/file/d/1xbv-EvsmrlD6MBT0pEYciijE5tTF5ntb/preview" width="640" height="480"></iframe>
                 </section>
             </article>
         </main>
@@ -54,6 +52,8 @@
             <ul>
                 <li><a href="https://github.com/victoriabalderas">Mi perfil de Github</a></li>
                 <li><a href="https://github.com/victoriabalderas?tab=repositories">Otros proyectos</a></li>
+                <li><a href="https://www.facebook.com/Bananaarcoiris">Página de Facebook del negocio</a></li>
+                <li><a href="https://www.instagram.com/banana.arcoirismty/">Página de instagram del negocio</a></li>
             </ul>
         </aside>
     </div>
