--- a/gfuelinme/pasatiemposv2/pasatiempo3.html
+++ b/gfuelinme/pasatiemposv2/pasatiempo3.html
@@ -17,7 +17,7 @@
         <article>
             <section>
                 <p>Últimamente he empezado a tomar la costumbre de leer por las noches. Es algo nuevo para mí, pero me está gustando mucho. Me he dado cuenta de que disfruto bastante los libros de fantasía, true crime y ciencia ficción, porque me transportan a mundos diferentes o me mantienen intrigado con historias interesantes. Además de los libros, también me gusta leer blogs y páginas sobre temas que me llaman la atención, como los deportes o la tecnología. Aunque todavía estoy acostumbrándome a hacer de la lectura una rutina, siento que poco a poco se está volviendo un momento que disfruto mucho al final del día.</p>
-                <img width="560" height="315" src="Imagenes/lectura.jpg" alt="Persona leyendo un libro">
+                <img width="560" height="315" src="imagenes/lectura.jpg" alt="Persona leyendo un libro">
                 <img width="560" height="315" src="imagenes/monton-libros.jpeg" alt="Monton de libros">
             </section>
         </article>
