Agregue segundo pasatiempo

--- a/RickyCorCam/pasatiempos2/index.html
+++ b/RickyCorCam/pasatiempos2/index.html
@@ -20,13 +20,12 @@
                 <li><a href="pasatiempo2.html" target="_blank">GUITARRA</a></li>
                 <li><a href="pasatiempo3.html" target="_blank">Pasatiempo3</a></li>
                 <li><a href="pasatiempo4.html" target="_blank">Pasatiempo4</a></li>
-                <li><a href="pasatiempo5.html" target="_blank">Pasatiempo5</a></li>
             </ul>
         </section>
         <br>
         <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdOCgBeWHQYQAQEaS2tu-QMn2kDL4JDY5B3594qBAyVFVo71w/formResponse" method="POST" target="_blank">
             <input type="text" name="entry.2105416059" placeholder="Ingrese su nombre" required>
-            <input type="text" name="entry.670043046" placeholder="Ingrese su pasatiempo favorito" required>
+            <input type="text" name="entry.670043046" placeholder="Ingrese su pasatiempo fav" required>
             <button type="submit">Enviar</button>
         </form>
     </main>
