--- a/RickyCorCam/pasatiempos2/pasatiempo2.html
+++ b/RickyCorCam/pasatiempos2/pasatiempo2.html
@@ -10,6 +10,9 @@
         <hr>
         <h1>GUITARRA</h1>
     </header>
+    <nav>
+        <a href="#tipos">TIPOS DE GUITARRA</a> <a href="#estancamiento">ESTANCAMIENTO</a>
+    </nav>
     <main>
         <hr>
         <p>La <strong>guitarra</strong> es un pasatiempo muy bueno a mi parecer, <br>
@@ -18,7 +21,56 @@
             Asi mismo desde que comence a tocar guitarra me ha gustado y le he prestado mas atencion a la musica regional. <br>
             algo que a mi parecer cada vez se perdia mas dado que siempre ibamos prefiriendo la extranjera.
         </p>
-        <img src="img/guitarra.jpg" alt="GUITARRA" width="350">
+        <img src="img/guitarra.jpg" alt="GUITARRA" width="200">
+        <section>
+            <hr>
+            <table id="tipos">
+                <tr>
+                    <th>TIPOS DE GUITARRA</th>
+                </tr>
+                <tr>
+                    <th>TIPO</th>
+                    <th>NO. CUERDAS</th>
+                    <th>USO</th>
+                </tr>
+                <tr>
+                    <td>Acustica</td>
+                    <td>6</td>
+                    <td>Normalmente se usa para la melodia de la cancion.</td>
+                </tr>
+                <tr>
+                    <td>Docerola</td>
+                    <td>12</td>
+                    <td>Esta suele usarse para tocar los requintos dado que gracias a sus 12 cuerdas obtiene un mejor sonido.</td>
+                </tr>
+                <tr>
+                    <td>Bajoquinto</td>
+                    <td>10</td>
+                    <td>Esta la he visto usarse tanto para melodias como para requintos por su peculiar sonido.</td>
+                </tr>
+                <tr>
+                    <td>Electrica</td>
+                    <td>6</td>
+                    <td>Esta guitarra no se usa para el regional pero tiene un muy buen sonido y es utilizada para otros generos como el rock.</td>
+                </tr>
+            </table>
+        </section>
+        <section>
+            <h1 id="estancamiento">El estancamiento</h1>
+            <p>Normalmente la guitarra suele ser un poco frustante al principio por lo dificil que es controlar tus movimientos, <br>
+                pero si le dedicas aunque sea un poco de tiempo diario puedes notar mejoria al poco tiempo. <br>
+                Lo mejor en este tipo de hobbys es ir guardando tus avances en video para que te des cuenta de lo tanto que has mejorrado, <br>
+                y esto te ayuda a no sentirte mal.
+            </p>
+        </section>
     </main>
+    <aside>
+            
+    </aside>
+    <footer>
+        <hr>
+        <p>Ricardo Cortes Camarillo #2002049</p>
+        <p>ricardo.corcam@gmail.com</p>
+    </footer>
 </body>
 </html>
