--- a/gfuelinme/pasatiemposv2/pasatiempo1.html
+++ b/gfuelinme/pasatiemposv2/pasatiempo1.html
@@ -32,7 +32,7 @@
         <aside>
             <section>
                 <h2>Dato curioso</h2>
-                <p>La primera vez que fui al Estadio Universitario fue el 23 de octubre del 2010, en un partido contra los Pumas de la UNAM. Recuerdo que el marcador fue 2 a 0 a favor de Tigres con goles de Juninho y Damian Álvarez.</p>
+                <p>La primera vez que fuí al Estadio Universitario fue el 23 de octubre del 2010, en un partido contra los Pumas de la UNAM. Recuerdo que el marcador fue 2 a 0 a favor de Tigres con goles de Juninho y Damian Álvarez.</p>
             </section>
         </aside>
     </main>
