--- a/victoriabalderas/index.html
+++ b/victoriabalderas/index.html
@@ -11,16 +11,46 @@
     </header>
     
     <main>
-        <h2>PRACTICA 1</h2>
-        <p>Página web sencilla acerca de mis pasatiempos y gustos. Practica realizada del 13 al 15 de agosto </p>
-        <ul>
-            <li><a href="https://victoriabalderas.github.io/practica1/"> Link Sitio Publicado</a></li> 
-            <li><a href="https://github.com/victoriabalderas/practica1">Link del repositorio</a></li>
-            <li><a href="https://github.com/victoriabalderas/practica1/commits/main/?since=2025-08-13&until=2025-08-15">Link de los commits</a></li>
-        </ul>
+        <article>
+            <section>
+                <h2>PRÁCTICA 1</h2>
+                <p>Página web sencilla acerca de mis pasatiempos y gustos. Estructurado de manera sencilla. Practica realizada del 13 al 15 de agosto </p>
+                <ul>
+                    <li><a href="https://victoriabalderas.github.io/practica1/"> Link Sitio Publicado</a></li> 
+                    <li><a href="https://github.com/victoriabalderas/practica1">Link del repositorio</a></li>
+                    <li><a href="https://github.com/victoriabalderas/practica1/commits/main/?since=2025-08-13&until=2025-08-15">Link de los commits</a></li>
+                </ul>
+            </section>
+        </article>
+
+        <article>
+            <section>
+                <h2>PRÁCTICA 2</h2>
+                <p>Creación de carpeta, usuario en archivo index principal y página para colocar links de las prácticas. </p>
+                <ul>
+                    <li><a href="https://fdw52ad2025.github.io/website52/victoriabalderas/index.html"> Link Página personal de evidencias</a></li> 
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/victoriabalderas/index.html?since=2025-08-20&until=2025-08-22">Link de los commits</a></li>
+                </ul>
+            </section>
+        </article>
+
+        <article>
+            <section>
+                <h2>PRÁCTICA 3</h2>
+                <p>Segunda versión de la página web acerca de mis pasatiempos y gustos. Agregado de nuevas estiquetas vistas en clase y diseño mejorado. Practica realizada del 27 al 29 de agosto. </p>
+                <ul>
+                    <li><a href="https://fdw52ad2025.github.io/website52/victoriabalderas/pasatiemposver2/mainpasatiempos.html"> Link Página pasatiempos versión 2:</a></li> 
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/victoriabalderas?since=2025-08-27&until=2025-08-27">Link Commits trabajo en clase 27 de agosto: </a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/victoriabalderas">Link de los commits</a></li>
+                </ul>
+            </section>
+        </article>
     </main>
-    <aside></aside>
-    <footer></footer>
+    
+    <footer>
+        <address> Desarrollado por Victoria Abigail Balderas Guevara</address>
+    </footer>
+
 </body>
 </html>
  
