--- a/EddMont/pasatiempos2/index.html
+++ b/EddMont/pasatiempos2/index.html
@@ -22,6 +22,10 @@
                 <li><a href="Pasatiempo5.html">Pasatiempo5</a></li>
             </ul>
         </section>
-    </main>
+
+        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdRKkOKgblMYoXwxt1OPHgfpaYqM0Jk5naDIaBeYWClDWxCWw/formResponse" method="POST" target="_blank">
+            <input type="text" name="entry.1102680623" placeholder="Diga su pasatiempo" required>
+            <button type="submit">Enviar</button>
+        </form>
 </body>
 </html>
